# backend/routers/toppings.go
@@ -1,11 +1,13 @@
 package routers
 
 import (
+	"fmt"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 	"github.com/isc-makeit/isc-fes/backend/domains/entities/toppings"
+	toppings_service "github.com/isc-makeit/isc-fes/backend/services/store/toppings"
 	"github.com/isc-makeit/isc-fes/backend/utils"
 )
 
@@ -20,6 +22,26 @@ func (s *Server) GetToppingsByStoreID(c *gin.Context, storeID uuid.UUID) {
 		Total: len(toppings),
 		Data:  utils.Map(toppings, toToppingResponse),
 	})
+}
+
+func (s *Server) CreateTopping(c *gin.Context, storeID uuid.UUID) {
+	var input CreateToppingJSONRequestBody
+	if err := c.ShouldBindJSON(&input); err != nil {
+		s.handleCommonServiceErrors(c, fmt.Errorf("middleware で検証しているはずの、ボディのシリアライズに失敗: %w", err))
+		return
+	}
+
+	topping, err := s.toppings.CreateTopping(c, toppings_service.CreateToppingInput{
+		StoreID:   storeID,
+		Name:      input.Name,
+		UnitPrice: input.UnitPrice,
+	})
+	if err != nil {
+		s.handleCommonServiceErrors(c, err)
+		return
+	}
+
+	c.JSON(http.StatusCreated, toToppingResponse(topping))
 }
 
 func toToppingResponse(t toppings.Topping) Topping {
